@@ -1,5 +1,7 @@
 XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>
 
+* Add support for Shift+Tab in the text editor: dedent a line or the selected
+  lines. Issue #282.
 * Making the format string for modified files configurable. The default value
   is "%s *". Issue #280.
 * Making autoindent switched on by default. Issue #279.
